<resources>
    <string name="app_name">RecuperacioM8</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_navigation_activity">NavigationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="maps">Food</string>
    <string name="other">Cart</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="text">Text</string>
    <string name="SQLite">FormSQLite</string>
    <string name="fav">Favorites</string>
    <string name="formulariSQLite">Formulari SQLite</string>
</resources>